// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`for cdtnadminprodserver 1`] = `
Array [
  Object {
    "apiVersion": "v1",
    "kind": "PersistentVolumeClaim",
    "metadata": Object {
      "annotations": Object {
        "app.gitlab.com/app": "socialgouv-sample",
        "app.gitlab.com/env": "my-test",
      },
      "labels": Object {
        "application": "www",
        "owner": "my-team",
        "team": "my-team",
      },
      "name": "foo",
      "namespace": "sample-42-my-test",
    },
    "spec": Object {
      "accessModes": Array [
        "ReadWriteMany",
      ],
      "resources": Object {
        "requests": Object {
          "storage": "42o",
        },
      },
      "selector": Object {
        "matchLabels": Object {
          "usage": "my-test-foo",
        },
      },
      "storageClassName": "",
    },
  },
  Object {
    "apiVersion": "v1",
    "kind": "PersistentVolume",
    "metadata": Object {
      "annotations": Object {
        "app.gitlab.com/app": "socialgouv-sample",
        "app.gitlab.com/env": "my-test",
      },
      "labels": Object {
        "application": "www",
        "owner": "my-team",
        "team": "my-team",
        "usage": "my-test-foo",
      },
      "name": "my-test-foo",
      "namespace": "sample-42-my-test",
    },
    "spec": Object {
      "accessModes": Array [
        "ReadWriteMany",
      ],
      "azureFile": Object {
        "secretName": "azure-cdtnadmindev-volume",
        "secretNamespace": "cdtn-admin",
        "shareName": "cdtnadminprodserver-backup-restore",
      },
      "capacity": Object {
        "storage": "42o",
      },
      "persistentVolumeReclaimPolicy": "Delete",
      "storageClassName": "",
    },
  },
]
`;

exports[`should create a persistent volume claim and a persistent volume 1`] = `
Array [
  Object {
    "apiVersion": "v1",
    "kind": "PersistentVolumeClaim",
    "metadata": Object {
      "annotations": Object {
        "app.gitlab.com/app": "socialgouv-sample",
        "app.gitlab.com/env": "my-test",
      },
      "labels": Object {
        "application": "www",
        "owner": "my-team",
        "team": "my-team",
      },
      "name": "foo",
      "namespace": "sample-42-my-test",
    },
    "spec": Object {
      "accessModes": Array [
        "ReadWriteMany",
      ],
      "resources": Object {
        "requests": Object {
          "storage": "42o",
        },
      },
      "selector": Object {
        "matchLabels": Object {
          "usage": "my-test-foo",
        },
      },
      "storageClassName": "",
    },
  },
  Object {
    "apiVersion": "v1",
    "kind": "PersistentVolume",
    "metadata": Object {
      "annotations": Object {
        "app.gitlab.com/app": "socialgouv-sample",
        "app.gitlab.com/env": "my-test",
      },
      "labels": Object {
        "application": "www",
        "owner": "my-team",
        "team": "my-team",
        "usage": "my-test-foo",
      },
      "name": "my-test-foo",
      "namespace": "sample-42-my-test",
    },
    "spec": Object {
      "accessModes": Array [
        "ReadWriteMany",
      ],
      "azureFile": Object {
        "secretName": "azure-my-team-volume",
        "secretNamespace": "sample-42-my-test",
        "shareName": "foo",
      },
      "capacity": Object {
        "storage": "42o",
      },
      "persistentVolumeReclaimPolicy": "Delete",
      "storageClassName": "",
    },
  },
]
`;
